--- a/html/robotics.html
+++ b/html/robotics.html
@@ -21,22 +21,22 @@
         <h1>Welcome to School Robotics Club</h1>
         <p>Here you will find information about our club and our activities. Below are some pictures from our past events:</p>
         <div class="gallery">
-          <img src="pic1.jpg" alt="Robotics Club Event">
-          <img src="pic2.jpg" alt="Robotics Club Event">
-          <img src="pic3.jpg" alt="Robotics Club Event">
-          <img src="pic4.jpg" alt="Robotics Club Event">
-          <img src="pic5.jpg" alt="Robotics Club Event">
+          <img src="photo_2022-11-09_21-39-47.jpg" alt="Robotics Club Event">
+          <img src="photo_2022-11-09_21-39-48.jpg" alt="Robotics Club Event">
+          <img src="photo_2022-11-09_21-39-49.jpg" alt="Robotics Club Event">
+          <img src="photo_2022-11-09_21-39-50.jpg" alt="Robotics Club Event">
+          <img src="photo_2022-11-09_21-39-51.jpg" alt="Robotics Club Event">
         </div>
       </section>
       <section id="about">
         <h2>About Us</h2>
         <p>Our club is composed of one teacher and four members. Here are their bios:</p>
         <ul>
-          <li><strong>Teacher:</strong> Name - Position</li>
-          <li><strong>Member 1:</strong> Name - Position</li>
-          <li><strong>Member 2:</strong> Name - Position</li>
-          <li><strong>Member 3:</strong> Name - Position</li>
-          <li><strong>Member 4:</strong> Name - Position</li>
+          <li><strong>Teacher:</strong> Nuruk Ain - Position</li>
+          <li><strong>Member 1:</strong> Yuwenh - Position</li>
+          <li><strong>Member 2:</strong> Mukmin - Position</li>
+          <li><strong>Member 3:</strong> Aqiff - Position</li>
+          <li><strong>Member 4:</strong> Fahim - Position</li>
         </ul>
       </section>
       <section id="services">
