--- a/html/robotics.html
+++ b/html/robotics.html
@@ -20,13 +20,17 @@
       <section id="home">
         <h1>Welcome to School Robotics Club</h1>
         <p>Here you will find information about our club and our activities. Below are some pictures from our past events:</p>
-        <div class="gallery">
-          <img src="photo_2022-11-09_21-39-47.jpg" alt="Robotics Club Event">
-          <img src="photo_2022-11-09_21-39-48.jpg" alt="Robotics Club Event">
-          <img src="photo_2022-11-09_21-39-49.jpg" alt="Robotics Club Event">
-          <img src="photo_2022-11-09_21-39-50.jpg" alt="Robotics Club Event">
-          <img src="photo_2022-11-09_21-39-51.jpg" alt="Robotics Club Event">
+        <div class="gallery-container">
+          <div class="gallery">
+            <img src="image1.jpg" alt="Image 1">
+            <img src="image2.jpg" alt="Image 2">
+            <img src="image3.jpg" alt="Image 3">
+            <img src="image4.jpg" alt="Image 4">
+          </div>
+          <div class="prev">&#10094;</div>
+          <div class="next">&#10095;</div>
         </div>
+        
       </section>
       <section id="about">
         <h2>About Us</h2>
