--- a/html/robotics.html
+++ b/html/robotics.html
@@ -20,16 +20,40 @@
       <section id="home">
         <h1>Welcome to School Robotics Club</h1>
         <p>Here you will find information about our club and our activities. Below are some pictures from our past events:</p>
-        <div class="gallery-container">
-          <div class="gallery">
-            <img src="photo_2022-11-09_21-39-47.jpg" alt="Image 1">
-            <img src="photo_2022-11-09_21-39-48.jpg" alt="Image 2">
-            <img src="photo_2022-11-09_21-39-49.jpg" alt="Image 3">
-            <img src="photo_2022-11-09_21-39-50.jpg" alt="Image 4">
-          </div>
-          <div class="prev">&#10094;</div>
-          <div class="next">&#10095;</div>
-        </div>
+      <!-- Slideshow container -->
+<div class="slideshow-container">
+
+  <!-- Full-width images with number and caption text -->
+  <div class="mySlides fade">
+    <div class="numbertext">1 / 3</div>
+    <img src="img1.jpg" style="width:100%">
+    <div class="text">Caption Text</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">2 / 3</div>
+    <img src="img2.jpg" style="width:100%">
+    <div class="text">Caption Two</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">3 / 3</div>
+    <img src="img3.jpg" style="width:100%">
+    <div class="text">Caption Three</div>
+  </div>
+
+  <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+<br>
+
+<!-- The dots/circles -->
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span>
+  <span class="dot" onclick="currentSlide(2)"></span>
+  <span class="dot" onclick="currentSlide(3)"></span>
+</div>
         
       </section>
       <section id="about">
