--- a/html/robotics.html
+++ b/html/robotics.html
@@ -20,71 +20,25 @@
       <section id="home">
         <h1>Welcome to School Robotics Club</h1>
         <p>Here you will find information about our club and our activities. Below are some pictures from our past events:</p>
-        <h1>CSS-only Carousel</h1>
-
-        <p>This carousel is created with HTML and CSS only.</p>
+            <div class="slider">
+                <div class="images">
+                    <input type="radio" name="slide" id="img1" checked>
+                    <input type="radio" name="slide" id="img2">
+                    <input type="radio" name="slide" id="img3">
+                    <input type="radio" name="slide" id="img4">
         
-        <section class="carousel" aria-label="Gallery">
-          <ol class="carousel__viewport">
-            <li id="carousel__slide1"
-                tabindex="0"
-                class="carousel__slide">
-              <div class="carousel__snapper">
-                <a href="#carousel__slide4"
-                   class="carousel__prev">Go to last slide</a>
-                <a href="#carousel__slide2"
-                   class="carousel__next">Go to next slide</a>
-              </div>
-            </li>
-            <li id="carousel__slide2"
-                tabindex="0"
-                class="carousel__slide">
-              <div class="carousel__snapper"></div>
-              <a href="#carousel__slide1"
-                 class="carousel__prev">Go to previous slide</a>
-              <a href="#carousel__slide3"
-                 class="carousel__next">Go to next slide</a>
-            </li>
-            <li id="carousel__slide3"
-                tabindex="0"
-                class="carousel__slide">
-              <div class="carousel__snapper"></div>
-              <a href="#carousel__slide2"
-                 class="carousel__prev">Go to previous slide</a>
-              <a href="#carousel__slide4"
-                 class="carousel__next">Go to next slide</a>
-            </li>
-            <li id="carousel__slide4"
-                tabindex="0"
-                class="carousel__slide">
-              <div class="carousel__snapper"></div>
-              <a href="#carousel__slide3"
-                 class="carousel__prev">Go to previous slide</a>
-              <a href="#carousel__slide1"
-                 class="carousel__next">Go to first slide</a>
-            </li>
-          </ol>
-          <aside class="carousel__navigation">
-            <ol class="carousel__navigation-list">
-              <li class="carousel__navigation-item">
-                <a href="#carousel__slide1"
-                   class="carousel__navigation-button">Go to slide 1</a>
-              </li>
-              <li class="carousel__navigation-item">
-                <a href="#carousel__slide2"
-                   class="carousel__navigation-button">Go to slide 2</a>
-              </li>
-              <li class="carousel__navigation-item">
-                <a href="#carousel__slide3"
-                   class="carousel__navigation-button">Go to slide 3</a>
-              </li>
-              <li class="carousel__navigation-item">
-                <a href="#carousel__slide4"
-                   class="carousel__navigation-button">Go to slide 4</a>
-              </li>
-            </ol>
-          </aside>
-        </section>
+                    <img src="photo_2022-11-09_21-39-47.jpg" class="m1" alt="img1">
+                    <img src="photo_2022-11-09_21-39-47.jpg" class="m2" alt="img2">
+                    <img src="photo_2022-11-09_21-39-47.jpg" class="m3" alt="img3">
+                    <img src="photo_2022-11-09_21-39-47.jpg" class="m4" alt="img4">
+                </div>
+                <div class="dots">
+                    <label for="img1"></label>
+                    <label for="img2"></label>
+                    <label for="img3"></label>
+                    <label for="img4"></label>
+                </div>
+            </div>
         
       </section>
       <section id="about">
