--- a/html/robotics.html
+++ b/html/robotics.html
@@ -3,6 +3,7 @@
   <head>
     <title>School Robotics Club</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="java.js"></script>
   </head>
   <body>
     <header>
@@ -20,25 +21,30 @@
       <section id="home">
         <h1>Welcome to School Robotics Club</h1>
         <p>Here you will find information about our club and our activities. Below are some pictures from our past events:</p>
-            <div class="slider">
-                <div class="images">
-                    <input type="radio" name="slide" id="img1" checked>
-                    <input type="radio" name="slide" id="img2">
-                    <input type="radio" name="slide" id="img3">
-                    <input type="radio" name="slide" id="img4">
-        
-                    <img src="photo_2022-11-09_21-39-47.jpg" class="m1" alt="img1">
-                    <img src="photo_2022-11-09_21-39-47.jpg" class="m2" alt="img2">
-                    <img src="photo_2022-11-09_21-39-47.jpg" class="m3" alt="img3">
-                    <img src="photo_2022-11-09_21-39-47.jpg" class="m4" alt="img4">
-                </div>
-                <div class="dots">
-                    <label for="img1"></label>
-                    <label for="img2"></label>
-                    <label for="img3"></label>
-                    <label for="img4"></label>
-                </div>
-            </div>
+
+        <div id="image-slider" class="splide">
+          <div class="splide__track">
+            <ul class="splide__list">
+              <li class="splide__slide">
+                <img src="image01.jpg">
+              </li>
+              <li class="splide__slide">
+                <img src="image02.jpg">
+              </li>
+              <li class="splide__slide">
+                <img src="image03.jpg">
+              </li>
+            </ul>
+          </div>
+        </div>
+        <script>
+          document.addEventListener( 'DOMContentLoaded', function () {
+            new Splide( '#image-slider' ).mount();
+          } );
+        </script>
+        <script>
+          new Splide( '#image-slider' ).mount();
+        </script>
         
       </section>
       <section id="about">
