--- a/html/robotics.html
+++ b/html/robotics.html
@@ -26,13 +26,13 @@
           <div class="splide__track">
             <ul class="splide__list">
               <li class="splide__slide">
-                <img src="image01.jpg">
+                <img src="photo_2022-11-09_21-39-50.jpg".jpg">
               </li>
               <li class="splide__slide">
-                <img src="image02.jpg">
+                <img src="photo_2022-11-09_21-39-50.jpg">
               </li>
               <li class="splide__slide">
-                <img src="image03.jpg">
+                <img src="photo_2022-11-09_21-39-50.jpg">
               </li>
             </ul>
           </div>
