--- a/html/robotics.html
+++ b/html/robotics.html
@@ -26,7 +26,7 @@
           <div class="splide__track">
             <ul class="splide__list">
               <li class="splide__slide">
-                <img src="photo_2022-11-09_21-39-50.jpg".jpg">
+                <img src="photo_2022-11-09_21-39-50.jpg">
               </li>
               <li class="splide__slide">
                 <img src="photo_2022-11-09_21-39-50.jpg">
