--- a/html/robotics.html
+++ b/html/robotics.html
@@ -51,11 +51,11 @@
         <h2>About Us</h2>
         <p>Our club is composed of one teacher and four members. Here are their bios:</p>
         <ul>
-          <li><strong>Teacher:</strong> Nuruk Ain - Position</li>
-          <li><strong>Member 1:</strong> Yuwenh - Position</li>
-          <li><strong>Member 2:</strong> Mukmin - Position</li>
-          <li><strong>Member 3:</strong> Aqiff - Position</li>
-          <li><strong>Member 4:</strong> Fahim - Position</li>
+          <li><strong>Teacher:</strong> Nuruk Ain - </li>
+          <li><strong>Member 1:</strong> Yuwenh - </li>
+          <li><strong>Member 2:</strong> Mukmin - </li>
+          <li><strong>Member 3:</strong> Aqiff - </li>
+          <li><strong>Member 4:</strong> Fahim -</li>
         </ul>
       </section>
       <section id="services">
