--- a/html/robotics.html
+++ b/html/robotics.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>School Robotics Club</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="java.js"></script>
+    <l
+    <script src=
   </head>
   <body>
     <header>
