--- a/html/kelabrobotik.html
+++ b/html/kelabrobotik.html
@@ -22,6 +22,11 @@
       <li><a href="#">Contact</a></li>
     </ul>
   </nav>
+    <div class="background"></div>
+    <div class="content">
+      <h1>Animated Background</h1>
+      <p>Some text goes here</p>
+    </div>
 
 </body>
 </html>
@@ -127,3 +132,40 @@ nav {
     display: flex;
   }
 }
+body {
+  margin: 0;
+  padding: 0;
+}
+
+.background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background-image: linear-gradient(to right, #ff416c, #ff4b2b);
+  animation: animateBackground 10s ease infinite;
+}
+
+.content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+h1, p {
+  color: white;
+}
+
+@keyframes animateBackground {
+  0% {
+    background-position: 0 0;
+  }
+  100% {
+    background-position: 100% 0;
+  }
+}
+
