--- a/html/kelabrobotik.html
+++ b/html/kelabrobotik.html
@@ -82,7 +82,7 @@ nav {
 }
 
 .menu-icon span {
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   display: block;
   height: 2px;
   position: absolute;
@@ -92,7 +92,7 @@ nav {
 
 .menu-icon span::before,
 .menu-icon span::after {
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   content: '';
   display: block;
   height: 100%;
