--- a/html/kelabrobotik.html
+++ b/html/kelabrobotik.html
@@ -11,7 +11,7 @@
 
 <nav>
     <div class="logo">
-        <img src="photo_2023-02-15_22-16-35.jpg" alt="School Robotics Club Logo" width="80" height="80">
+    <img src="photo_2023-02-15_22-16-35.jpg" alt="School Robotics Club Logo" width="80" height="80">
     </div>
     <input type="checkbox" id="menu-toggle">
     <label for="menu-toggle" class="menu-icon"><span></span></label>
@@ -144,7 +144,7 @@ body {
   width: 100%;
   height: 100%;
   z-index: -1;
-  background-image: linear-gradient(to right, #ff416c, #ff4b2b);
+  background-image: linear-gradient(blue, light black);
   animation: animateBackground 10s ease infinite;
 }
 
