--- a/html/kelabrobotik.html
+++ b/html/kelabrobotik.html
@@ -16,8 +16,7 @@
     <input type="checkbox" id="menu-toggle">
     <label for="menu-toggle" class="menu-icon"><span></span></label>
     <ul class="menu">
-      <li><a href="lamanutama.html'">laman utama</a></li>
-      <li><a href="program.html">program</a></li>
+      <li><a href="program.html"></a></li>
       <li><a href="sertai.html">Sertai kami</a></li>
       <li><a href="geleri.html">geleri gambar</a></li>
     </ul>
