--- a/smktkk/sertai.html
+++ b/smktkk/sertai.html
@@ -7,9 +7,8 @@
     <title>Sertai kami</title>
 </head>
 <body>
-    <button ><a href="https://forms.gle/LC1TzRX6BgSnrnaEA" target="_blank">pergi ke laman web</a></button>
-    <iframe src="https://forms.gle/LC1TzRX6BgSnrnaEA" width="370" height="667"> 
-    </iframe>
+   <center> <button type="button" class="btn"><a href="https://forms.gle/LC1TzRX6BgSnrnaEA" target="_blank">pergi ke laman web</a></button></center>
+    
 
 
     
@@ -22,7 +21,7 @@
 }
 
 a:link {
-  color: rgb(0, 255, 0);
+  color: rgb(255, 0, 0);
   background-color: transparent;
   text-decoration: none;
 }
@@ -41,6 +40,7 @@ a:active {
   background-color: transparent;
   text-decoration: underline;
 }
+
 </style>
 </html>
 
